--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ nav ul li a:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: -1; /* Push the video to the background */
 }
 
 .video-overlay {
